refactor: remove WriteResult, adjust Journal and supporting classes for enhanced handling, and add InMemoryJournalTest